major W all around

--- a/project_proposal/data_exploration.ipynb
+++ b/project_proposal/data_exploration.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ae7f02c7-b514-40f3-aeba-cb79fd8c7c0b",
+   "metadata": {},
+   "source": [
+    "<h1>EECS 549 Final Project</h1>\n",
+    "\n",
+    "Data exploration & basic mainipulation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8b27675c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "545fc5df",
    "metadata": {},
    "outputs": [],
@@ -24,8 +34,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a765fab-1976-46b0-9eac-a8fdd7ce24d5",
+   "metadata": {},
+   "source": [
+    "<h2>Combine datasets</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8d3871a0",
    "metadata": {},
    "outputs": [],
@@ -35,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "68c6b950",
    "metadata": {},
    "outputs": [],
@@ -45,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "64192f14",
    "metadata": {},
    "outputs": [],
@@ -62,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "(9999975, 23)"
+       "(9999980, 24)"
       ]
      },
      "execution_count": 7,
@@ -76,21 +94,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "d201b25a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "mean         15.300954\n",
+       "mean         15.300088\n",
        "median        4.000000\n",
        "min           0.000000\n",
        "max       51673.000000\n",
        "Name: body, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "cd8b556e",
    "metadata": {},
    "outputs": [],
@@ -111,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "af9523bc",
    "metadata": {},
    "outputs": [
@@ -123,7 +141,7 @@
        "Name: created_date, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,9 +151,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c1959c5-aa97-41f9-8142-7b2704786477",
+   "metadata": {},
+   "source": [
+    "<h2>Create new dataset made up of full posts</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f4f6a0a",
+   "id": "ab066b45-f215-4c75-80cb-e97966fadd9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge['full_text'] = merge.groupby('id_x')[['title', 'body']].transform(lambda s: '\\n'.join(str(s)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "389dda40-58ba-434a-af40-9f0417c06038",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge['full_text'].sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13913680-52f7-4903-8959-53090cf072c3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -157,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
