finishing up proposal

--- a/code/get_docs_to_annotate.ipynb
+++ b/code/get_docs_to_annotate.ipynb
@@ -7260,23 +7260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 814,
    "id": "3121fb48-51c2-4a55-8618-756038fd9ab1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"What, if anything, are you allergic to? I'd have to say hands down my most annoying allergy is being allergic to the sun.\\n\\nI have other pretty basic allergies to various medications, but they don't compare to the frustration and awfulness of the sun. Cat fur, pollen and dust Dogs, specifically Chihuahuas. Peanuts, soy, pollen, dust, most animals including dogs and cats, my sister and leaving the house. Whatever chemicals they use on cheap leather these days. If I have trouble breathing in a clothing store it's a pretty strong sign they're selling low quality trash. I’m so proud I understand this Cotton and/or clothes softener. \\n\\nI think its a bit of both. But i can't wear clothes that are pure cotton or clothes washed in softener bc it makes me just wanna rip the shirt off n flay my skin. Spring and fall... I was allergic to milk from my teens through my early forties. In the US milk is an ingredient in all kinds of food, so my diet was quite restricted. Grass It only happened once, but when I was a little girl I was brushing my grandfather's horse and broke out into hives. Only time that ever happened, had a good rapport with the animal after that and it never happened again. Miss that pony! Lobster makes me hallicinate The liquid type of latex that they apply costume makeup with. Plant sex Bees, sulfurs, iodine, and  most humans?👿 \""
+       "'What was a random act of kindness you were recipient to? Was at a store as a little kid. Was waiting in line behind this old man. as he was counting out his money to pay he turned to me and gave me a dollar. '"
       ]
      },
-     "execution_count": 421,
+     "execution_count": 814,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "docs[93141]"
+    "docs[2497]"
    ]
   },
   {
