cleaned up significantly

--- a/project_proposal/data_exploration.ipynb
+++ b/project_proposal/data_exploration.ipynb
@@ -28,6 +28,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "d85f78e0-1437-4a67-988f-6f415723df6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "545fc5df",
    "metadata": {},
    "outputs": [],
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8d3871a0",
    "metadata": {},
    "outputs": [],
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "68c6b950",
    "metadata": {},
    "outputs": [],
@@ -67,27 +77,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "64192f14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge = posts.merge(comments, how = 'left', left_on = 'permalink', right_on = 'post permalink')"
+    "#prepare data\n",
+    "posts_subset = posts[['title', 'permalink', 'created_date']]\n",
+    "posts_subset = posts_subset.rename(columns = {'created_date': 'post_created'})\n",
+    "comments = comments.drop(columns = ['permalink'])\n",
+    "\n",
+    "merge = posts_subset.merge(comments, how = 'left', left_on = 'permalink', right_on = 'post permalink')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f8248b3f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9999980, 24)"
+       "(9999980, 13)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d201b25a",
    "metadata": {},
    "outputs": [
@@ -112,7 +127,7 @@
        "Name: body, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,13 +137,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "cd8b556e",
+   "cell_type": "markdown",
+   "id": "79dba05c-5193-42b1-93db-ba500ed694a4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "posts['created_date'] = pd.to_datetime(posts['created_utc'], unit = 's')"
+    "<h2>Summary statistics about post dates</h2>"
    ]
   },
   {
@@ -165,44 +178,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "637ab237-8b95-4d49-a0a4-7ac8531b7551",
+   "id": "aac15786-3abb-478c-9b3d-9b2794b8accb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_map = pd.read_csv(\"../data/id_map.csv\", header = None)\n",
-    "id_map.columns = ['new', 'old']"
+    "# new numeric index \n",
+    "merge = merge.reset_index()\n",
+    "merge = merge.drop(columns = [\"id\"])\n",
+    "merge = merge.rename(columns = {'index': 'docid'})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e2075f41-7780-4e23-bcd5-bc9fe4c5cad7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge = merge.drop(columns = ['type_y', \n",
-    "                              'id_y', \n",
-    "                              'subreddit.id_y', \n",
-    "                              'subreddit.name_y', \n",
-    "                              'subreddit.nsfw_y',\n",
-    "                              'created_utc_y', \n",
-    "                              'permalink_y', 'score_y'])\n",
-    "           "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "3f5b48b5-c238-4926-b52f-7a9546614836",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge.columns = [col[:-2] if '_x' in col else col for col in merge.columns]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "id": "dcdac145-057d-43b8-9a6b-2ed92b83f8f9",
    "metadata": {},
    "outputs": [],
@@ -212,63 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1f36bd94-0fc6-4631-ace7-288d38cd60a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge = merge.merge(id_map, left_on = 'id', right_on = 'old', how = 'left')\n",
-    "merge = merge.drop(columns = 'old')\n",
-    "merge = merge.rename(columns = {'new':'docid'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "a75c422e-835f-4336-8a7e-a6b44cfac517",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fill_idx(s, df = merge):\n",
-    "    if pd.isnull(s) == True:\n",
-    "        max = df['docid'].max()\n",
-    "        return (max + 1)\n",
-    "    return s"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "b5f93790-43ef-40f0-8fc0-d4c6361e28f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged['docid'] = merge['docid'].apply(fill_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "6bc2123a-a4eb-4ef2-afec-5beb51190c09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ids = np.random.choice(list(set(merge['id'].values)), 100000, replace = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "7ec5efc6-880a-4bd5-b840-c473ad08be17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge = merge[merge['id'].isin(ids)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "id": "75b15320-53ac-4106-a082-b7ed8e98a512",
    "metadata": {},
    "outputs": [],
@@ -278,102 +210,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ab066b45-f215-4c75-80cb-e97966fadd9b",
    "metadata": {},
    "outputs": [],
    "source": [
     "titles = list(merge['title'].astype(str).values)\n",
     "comments = list(merge['body'].astype(str).values)\n",
-    "idx = list(merge['id'].values)"
+    "idx = list(merge['docid'].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "07612273-86e7-451b-8211-1d9a80f66cd9",
+   "execution_count": null,
+   "id": "fd5b51f2-75c1-4f67-a914-74f34b9484ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 53%|██████████████████████████████████████████▍                                     | 885635/1668782 [05:44<05:04, 2573.88it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 15\u001b[0m\n\u001b[1;32m     13\u001b[0m     idx_to_post[docid] \u001b[38;5;241m=\u001b[39m title \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m comment \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     14\u001b[0m     docid_to_postid[docid] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mid\u001b[39m\n\u001b[0;32m---> 15\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m     16\u001b[0m curr \u001b[38;5;241m=\u001b[39m idx_to_post[docid]\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(curr) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m25000\u001b[39m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "used_idx = np.random.choice(idx, size = 300000, replace = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "629df198-9835-43da-aea5-007d787940a5",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "idx_to_post = {}\n",
-    "docid_to_postid = {}\n",
     "\n",
-    "docid = 0\n",
-    "for i in tqdm(range(len(idx))):\n",
-    "    id = idx[i]\n",
+    "for i in tqdm(range(len(used_idx))):\n",
+    "    docid = idx[i]\n",
     "    title = titles[i]\n",
     "    comment = comments[i]\n",
-    "    if '[deleted]' in comment or '[removed]' in comment or '**PLEASE READ THIS MESSAGE IN ITS ENTIRETY BEFORE TAKING ACTION.**' in comment:\n",
+    "    if '[deleted]' in comment or '[removed]' in comment or '**PLEASE READ THIS MESSAGE IN ITS ENTIRETY BEFORE TAKING ACTION.*' in comment: \n",
     "        continue\n",
-    "    if id not in list(docid_to_postid.values()):\n",
-    "        docid += 1\n",
+    "    if id not in list(idx_to_post.values()):\n",
     "        idx_to_post[docid] = title + \" \" + comment + \" \"\n",
-    "        docid_to_postid[docid] = id\n",
     "        continue\n",
     "    curr = idx_to_post[docid]\n",
-    "    if len(curr) <= 25000:\n",
+    "    if len(curr) <= 30000:\n",
     "        idx_to_post[docid] = idx_to_post[docid] + comment + \" \""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "58b060a9-8ab9-4deb-af64-c1ec26e41300",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(idx_to_post.keys()) == list(docid_to_postid.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "3b03fb11-a17c-4980-a9ad-afb186935d7d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1668782, 100000)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(idx), len(set(idx))"
    ]
   },
   {
@@ -386,27 +263,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "eaf050a6-983a-4abb-b47a-72560ce9bb5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/ask_reddit_posts.jsonl\", \"w\") as f:\n",
+    "with open(\"../data/ask_reddit_posts_v2.jsonl\", \"w\") as f:\n",
     "    for k, v in list(idx_to_post.items()):\n",
     "        d = {'docid': k, 'text': v}\n",
     "        print(json.dumps(d), file = f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "b0411805-e127-421f-b795-6c373389a036",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"../data/id_map.csv\", \"w\") as f: \n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerows(docid_to_postid.items())"
    ]
   },
   {
