--- a/models/cross_encoder_scores.ipynb
+++ b/models/cross_encoder_scores.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "id": "d9500cc0-7216-4f16-b9ed-3924912095cf",
    "metadata": {},
    "outputs": [],
@@ -32,6 +32,7 @@
     "from utils import * \n",
     "\n",
     "import os \n",
+    "import csv\n",
     "import torch\n",
     "import pandas as pd \n",
     "\n",
@@ -88,41 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 132,
    "id": "744f40b4-8084-4721-af7c-b1dfb5c4c507",
    "metadata": {},
    "outputs": [],
    "source": [
-    "docids = [doc[0] for doc in comments]"
+    "docids = [doc[0] for doc in posts]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "7eb3da95-d785-456d-ae43-7e49eaa6b351",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.9928],\n",
-      "        [0.0015]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "features = tokenizer(['How many people live in Berlin?', 'What is the size of New York?'], ['Berlin had a population of 3,520,031 registered inhabitants in an area of 891.82 square kilometers.', 'New York City is famous for the Metropolitan Museum of Art.'],  padding=True, truncation=True, return_tensors=\"pt\")\n",
-    "\n",
-    "model.eval()\n",
-    "with torch.no_grad():\n",
-    "    scores = torch.nn.functional.sigmoid(model(**features).logits)\n",
-    "    print(scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "8f5b556c-ce51-46e8-834f-29d0ebbc6c76",
    "metadata": {},
    "outputs": [
@@ -130,15 +107,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|▎                                        | 1285/200001 [01:01<2:33:54, 21.52it/s]"
+      "100%|███████████████████████████████████████| 200001/200001 [4:49:04<00:00, 11.53it/s]\n"
      ]
     }
    ],
    "source": [
+    "# do not rerun! this is about 5 hours\n",
     "doc2text_score = {}\n",
-    "for docid in tqdm(docids): \n",
-    "    post = posts[docid][1]\n",
-    "    comment = comments[docid][1]\n",
+    "for i in tqdm(range(len(docids))): \n",
+    "    docid = docids[i]\n",
+    "    post = posts[i][1]\n",
+    "    comment = comments[i][1]\n",
     "\n",
     "    features = tokenizer(post, comment, padding = True, truncation = True, return_tensors = \"pt\")\n",
     "\n",
@@ -152,8 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "id": "7780142a-4e4a-4c23-9eea-82b635df1dcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../models/cross_encoder_scores.csv\", \"a\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    for k, v in list(doc2text_score.items()):\n",
+    "        writer.writerow([k, v])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45798b81-670c-4cb4-8e9c-5d0ab79dc382",
    "metadata": {},
    "outputs": [],
    "source": []
